@@ -747,7 +747,7 @@
       <module id="gnome-terminal" branch="gnome-2-24"/>
       <module id="gnome-themes" branch="gnome-2-24"/>
       <module id="gnome-user-docs"/>
-      <module id="gnome-utils"/>
+      <module id="gnome-utils" branch="gnome-2-24"/>
       <module id="gnome-volume-manager"/>
       <module id="gok" branch="gnome-2-24"/>
       <module id="gtk-engines" branch="gtk-engines-2-16"/>
