@@ -1,3 +1,9 @@
+2008-10-20  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	gnome-utils branched for GNOME 2.24.
+
 2008-10-20  Jordi Mallach  <jordi@sindominio.net>
 
 	* translation-teams.xml.in: rename Valencian-Catalan to
